@@ -1,3 +1,8 @@
+2015-01-12 Rajalakshmi Srinivasaraghavan <raji@linux.vnet.ibm.com>
+
+	* src/sphsinglepcqueue.cpp: Correct error messages.
+	* src/tests/sphsinglepcqueue_t.c: Likewise.
+
 2015-01-02  Steven Munroe  <sjmunroe@us.ibm.com>
 
 	* configure.ac (SPHDE_SO_VERSION): Change SO version to 1.0.0.
